--- a/src/main/webui/index.html
+++ b/src/main/webui/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Startpunkt</title>
   </head>
-  <body>
+  <body bgcolor="#232530">
     <div id="app"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
