Fix a background glitch
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/src/main/webui/index.html
+++ b/src/main/webui/index.html
@@ -32,8 +32,8 @@
       })();
     </script>
   </head>
-  <body style="margin: 0; background-color: inherit;">
-    <div id="app" style="min-height: 100vh; background-color: inherit;"></div>
+  <body style="margin: 0;">
+    <div id="app" style="min-height: 100vh;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
