--- a/src/main/webui/index.html
+++ b/src/main/webui/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google Fonts for handwritten font option -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Startpunkt</title>
     <!-- Immediate theme application - runs before ANY other script -->
     <script>
